--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@ header{
     min-height: 100vh;
     background-color: #ffcd62;
 }
+.header__block{
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: #ffcd62; */
+}
 .header__container{
     display: flex;
     justify-content: space-between;
@@ -75,9 +83,6 @@ header{
     margin-top: 40px;
 }
 
-.header-right{
-    /* background-color: green; */
-}
 
 .header-left__content h3{
     padding: 10px;
@@ -86,9 +91,12 @@ header{
 }
 .header-right{
     filter: drop-shadow(10px 5px 4px #111);
+    
 }
 
 .header-right img{
+    width: 100%;
+    height: 100%;
     /* width: 600px;
     height: 800px; */
 
@@ -111,3 +119,6 @@ header{
 
 /* Header End */
 
+@media(max-width: 800px){
+
+}
