--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ input {
 }
 
 .form__image2>img {
-    width: 100%;
+    width: 70%;
     height: 100%;
     /* position: relative;
     bottom: 100px; */
@@ -246,6 +246,124 @@ input {
     width: 100%;
     height: 100%;
 }
+
+@media only screen and (min-width: 600px) {
+    /* .form__image2,
+    .form__image1 {
+        visibility: hidden;
+    } */
+    .justify-1 {
+        position: relative;
+        right: 100px;
+        width: 100%;
+    }
+    .justify-2 {
+        position: relative;
+        right: 20px;
+    }
+    .justify-2>input {
+        display: inline-block;
+        margin: 20px 100px;
+    }
+    .justify-1>input {
+        display: inline-block;
+        margin: 20px 100px;
+        width: 100%
+    }
+    form {
+        margin-right: 30px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    /* .form__image2,
+    .form__image1 {
+        visibility: hidden;
+    } */
+    .justify-1 {
+        position: relative;
+        right: 100px;
+        width: 100%;
+    }
+    .justify-2 {
+        position: relative;
+        right: 20px;
+    }
+    .justify-2>input {
+        display: inline-block;
+        margin: 20px 100px;
+    }
+    .justify-1>input {
+        display: inline-block;
+        margin: 20px 100px;
+        width: 100%
+    }
+    form {
+        margin-right: 30px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .form__image2,
+    .form__image1 {
+        visibility: hidden;
+    }
+    .justify-1 {
+        position: relative;
+        right: 300px;
+        width: 100%;
+    }
+    .justify-2 {
+        position: relative;
+        right: 180px;
+    }
+    .justify-2>input {
+        display: inline-block;
+        margin: 20px 100px;
+    }
+    .justify-1>input {
+        display: inline-block;
+        margin: 20px 100px;
+        width: 120%
+    }
+}
+
+
+/* @media only screen and (min-width: 992px) {
+    /* .form__image2,
+    .form__image1 {
+        visibility: hidden;
+    } 
+
+.justify-1 {
+    position: relative;
+    right: 100px;
+    width: 100%;
+}
+
+.justify-2 {
+    position: relative;
+    right: 20px;
+}
+
+.justify-2>input {
+    display: inline-block;
+    margin: 20px 100px;
+}
+
+.justify-1>input {
+    display: inline-block;
+    margin: 20px 100px;
+    width: 100%
+}
+
+form {
+    margin-right: 30px;
+}
+
+
+}
+*/
 
 
 /* Footer Styles End */
