--- a/css/style.css
+++ b/css/style.css
@@ -16,28 +16,40 @@ body {
 header {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #ffcd62;
+    overflow: hidden;
 }
 
 
-/* .header__block {
-    /* position: fixed;
+.header__block {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
-    background-color: #ffcd62; */
+    background-color: #ffcd62; 
+}
+
+.header__block.sticky{
+    background-color:#52311e;
+    color: #fff;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.05);
+}
 
 .header__container {
     display: flex;
     justify-content: space-between;
-    padding: 30px 30px 20px 30px;
+    padding: 20px 30px 20px 30px;
 }
 
 .burger {
     font-size: 60px;
     color: #52311e;
+}
+
+.header__block.sticky .burger{
+    color: #ffcd62;
 }
 
 .burger-text {
@@ -48,8 +60,16 @@ header {
     font-family: 'Teko', sans-serif;
 }
 
+.header__block.sticky .burger-text{
+    color:#ffcd62;
+}
+
 .deliver {
     font-size: 40px;
+}
+
+.header__block.sticky .deliver{
+    color:#ffcd62;
 }
 
 .deliver-text {
@@ -58,6 +78,10 @@ header {
     color: #52311e;
     font-family: 'Teko', sans-serif;
     font-weight: 800;
+}
+
+.header__block.sticky .deliver-text{
+    color:#ffcd62;
 }
 
 .navigation__container .navigation {
@@ -78,6 +102,10 @@ header {
     font-family: 'Teko', sans-serif;
 }
 
+.header__block.sticky .navigation__container .navigation li a{
+    color:#ffcd62;
+}
+
 .left-nav {
     display: flex;
     align-items: center;
@@ -89,10 +117,11 @@ header {
 }
 
 .header__contents {
+    position:relative;
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    margin: 30px 30px;
+    margin: 140px 30px;
 }
 
 .header-left__content {
@@ -103,7 +132,7 @@ header {
 .header-left__content h3 {
     padding: 10px;
     border: 2px dashed #52311e;
-    font-size: 15px;
+    font-size: 25px;
 }
 
 .header-right {
@@ -112,7 +141,7 @@ header {
 
 .header-right img {
     width: 100%;
-    height: 100%;
+    height: auto;
     /* width: 600px;
     height: 800px; */
 }
@@ -132,6 +161,83 @@ header {
     text-shadow: 2px 1px #fff;
 }
 
+/* Header Media Query */
+@media(max-width: 900px){
+    .burger_text{
+        font-size:65px;
+    }
+    .week_text{
+        font-size: 40px;
+    }
+}
+
+@media(max-width: 760px){
+    .burger_text{
+        font-size: 50px;
+    }
+
+    .week_text{
+        font-size: 30px;
+    }
+}
+
+@media(max-width: 650px){
+    .navigation__container .navigation{
+        justify-content: center;
+    }
+    .header__contents {
+        flex-direction: column;
+    }
+    .burger_text{
+        font-size: 70px;
+    }
+
+    .week_text{
+        font-size: 50px;
+    }
+}
+@media(max-width:590px){
+    .deliver{
+        font-size: 30px;
+    }
+    .deliver-text{
+        font-size: 20px;
+        margin-left: 0;
+    }
+}
+
+@media(max-width: 400px){
+    .header{
+        overflow:hidden;
+    }
+    .deliver{
+        display: none;
+    }
+    .deliver-text{
+        display:none;
+    }
+    .navigation__container .navigation{
+        justify-content: center;
+    }
+    .navigation__container .navigation li {
+        margin-right: 25px;
+    }
+    .navigation__container .navigation li a {
+        font-size: 18px;
+    }
+    .header-left__content h3 {
+        font-size: 20px;
+    }
+    .header__container {
+        padding:10px;
+    }
+    .header__contents {
+        margin: 100px 30px;
+        flex-direction: column;
+    }
+
+}
+/* Header Media Query End */
 
 /* Header End */
 
@@ -393,13 +499,6 @@ img {
 
 
 /* eunice css */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .mother__category {
     width: 90%;
     box-shadow: 5px 10px 8px #888888;
@@ -450,6 +549,12 @@ img {
     height: 100%;
 }
 
+@media(max-width: 767px){
+    .firstbox__categories{
+        display: flex;
+        flex-direction: column;
+    }
+}
 
 /* Body -2 Styles End */
 
