--- a/css/style.css
+++ b/css/style.css
@@ -596,6 +596,13 @@ article img {
     text-align: center;
 }
 
+.footer__heading h1 {
+    font-size: 60px;
+    font-weight: 800;
+    color: #52311e;
+    font-family: 'Teko';
+}
+
 .footer-second {
     display: flex;
     flex-direction: row;
@@ -623,6 +630,24 @@ article img {
 input {
     padding: 20px;
     width: 100%;
+    border-radius: 5px;
+}
+
+[type="button"] {
+    background: red;
+    color: #fff;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Teko';
+    outline: none;
+    border: none;
+    border-radius: 5px;
+}
+
+[type="button"]:hover {
+    transition: .2s;
+    background: #ffcd62;
+    color: #111;
 }
 
 .form__image2 {
@@ -683,6 +708,10 @@ input {
     justify-content: space-between;
 }
 
+.brand-para {
+    width: 50%
+}
+
 @media only screen and (min-width: 600px) {}
 
 @media only screen and (max-width: 600px) {
@@ -731,11 +760,65 @@ input {
     .others__paragraph {
         width: 100%
     }
+    [type="button"]:hover {
+        transition: .2s;
+        background: #ffcd62;
+        color: #111;
+    }
 }
 
-@media only screen and (max-width: 768px) {}
-
-@media only screen and (min-width: 768px) {}
+@media only screen and (max-width: 768px) {
+    .footer-second {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin: 0;
+        width: 100%
+    }
+    .form-1 {
+        display: grid;
+        grid-gap: 20px;
+        margin: 10px;
+    }
+    .form-2 {
+        display: grid;
+        grid-gap: 20px;
+        margin: 10px;
+    }
+    .form__image1,
+    .form__image {
+        display: none;
+    }
+    .other {
+        margin: 0;
+        width: 100%
+    }
+    .others__heading {
+        justify-content: center;
+        margin: 2px 0 0 0;
+    }
+    .brand-about {
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        flex: 1;
+    }
+    .others__paragraph_info {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .brand-para,
+    .others__paragraph {
+        width: 100%
+    }
+    [type="button"]:hover {
+        transition: .2s;
+        background: #ffcd62;
+        color: #111;
+    }
+}
 
 @media only screen and (min-width: 992px) {}
 
